# jubjub-elgamal

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: dusk_ci.yml
src/: lib.rs  zk.rs
tests/: encryption.rs  u64_encryption.rs
