[package]
name = "jubjub-elgamal"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/dusk-network/jubjub-elgamal"
description = "ElGamal encryption scheme implemented on the JubJub curve with support for zero-knowledge circuits"
license = "MPL-2.0"
exclude = [".github/workflows/dusk-ci.yml", ".gitignore"]

[dependencies]
dusk-jubjub = { version = "0.15", default-features = false, features = ["zeroize"] }
dusk-plonk = { version = "0.21", default-features = false, features = ["alloc"], optional = true }
dusk-bytes = "0.1"

[dev-dependencies]
ff = { version = "0.13", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std_rng"] }

[features]
zk = ["dusk-plonk"]
